Formats team-handbook.md correctly by removing whitespace and adding line breaks. closes: #99

--- a/src/css/text.css
+++ b/src/css/text.css
@@ -15,6 +15,10 @@ article .main ul {
   margin-bottom: 1em;
 }
 
+article .main ol {
+  list-style-type: decimal;
+}
+
 article .main ul, article .main ol {
   margin-left: 0;
   padding-left: 2em;
